src/Components/StepsNavigation/StepsNavigation.css
.StepsNavigation{
  user-select: none;
    max-width: 610px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 35px 10px;
}

.StepsNavigation__item{
    cursor: pointer;
    border-radius: 50%;
    z-index: 1;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    min-width: 26px;
    max-width: 26px;
    min-height: 26px;
    max-height: 26px;
    box-shadow: 1px 1px 0 rgba(255, 255, 255, 0.75), inset 1px 1px 2px rgba(0, 0, 0, 0.1), inset 0 0 0 rgba(0, 0, 0, 0.05);
    background-color: #8a8484;
    background-image: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.05) 100%);
    color: #353535;
    font-family: "Open Sans";
    font-size: 17px;
    font-weight: 700;
    text-transform: uppercase;
    color: #fff;
}

.StepsNavigation__item.active{
    min-width: 32px;
    max-width: 32px;
    min-height: 32px;
    max-height: 32px;
    background-color: #fff !important;
    color: #000 !important;
    border: 2px solid #373737;
    border-radius: 100%;
    color: #000;
}

.StepsNavigation__item.active > .StepsNavigation__item-text{
    bottom: -25px
}

.StepsNavigation__item.visited{
    color: #fff;
    background-color: #343434;
}

.StepsNavigation__item.correct::after{
    position: absolute;
    content: '';
    background: #86be3d url('./img/check.png') no-repeat center / 10px;
    width: 20px;
    height: 19px;
    top: -10px;
    right: -5px;
    color: #fff;
    border-radius: 100%;
    font-size: 13px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.StepsNavigation__item.incorrect::after{
    position: absolute;
    content: '!';
    font-weight: bold;
    width: 20px;
    height: 19px;
    background-color: #cc091d;
    top: -10px;
    right: -5px;
    color: #fff;
    border-radius: 100%;
    font-size: 13px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.StepsNavigation__item-text{
    position: absolute;
    bottom: -25px;
    white-space: nowrap;
    color: #343434;
    font-family: "Open Sans";
    font-size: 11px;
    text-transform: uppercase;
}

.StepsNavigation__line{
    background-color: #cecece;
    height: 7px;
    width: 100%;
}

.StepsNavigation__line.filled{
    background-color: #636363;
}

@media (max-width: 450px),(max-device-width:450px) {
    .StepsNavigation__item:nth-child(4n + 1) > .StepsNavigation__item-text {
        bottom: auto;
        top: -25px;
    }
}

